LiteOS-M/rust_kernel/src/include/los_lms_pri_h.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const OS_LITTLE_ENDIAN: u32 = 4660;
pub const OS_BIG_ENDIAN: u32 = 17185;
pub const OS_BYTE_ORDER: u32 = 4660;
pub const LOS_OK: u32 = 0;
pub const OS_FAIL: u32 = 1;
pub const OS_64BIT_MAX: i32 = -1;
pub const __LIBATOMIC_N_LOCKS: u32 = 16;
pub const COMMON_ERRMODE: u32 = 3;
pub const FREE_ERRORMODE: u32 = 2;
pub const STORE_ERRMODE: u32 = 1;
pub const LOAD_ERRMODE: u32 = 0;
pub const LMS_SHADOW_BITS_PER_CELL: u32 = 2;
pub const LMS_MEM_BYTES_PER_SHADOW_CELL: u32 = 4;
pub const LMS_SHADOW_U8_CELL_NUM: u32 = 4;
pub const LMS_SHADOW_U8_REFER_BYTES: u32 = 16;
pub const LMS_SHADOW_ACCESSIBLE: u32 = 0;
pub const LMS_SHADOW_AFTERFREE: u32 = 3;
pub const LMS_SHADOW_REDZONE: u32 = 2;
pub const LMS_SHADOW_PAINT: u32 = 1;
pub const LMS_SHADOW_MASK: u32 = 3;
pub const LMS_SHADOW_ACCESSIBLE_U8: u32 = 0;
pub const LMS_SHADOW_AFTERFREE_U8: u32 = 255;
pub const LMS_SHADOW_REDZONE_U8: u32 = 170;
pub const LMS_SHADOW_MASK_U8: u32 = 255;
pub const LMS_SHADOW_PAINT_U8: u32 = 85;
pub const MEM_REGION_SIZE_1: u32 = 1;
pub const MEM_REGION_SIZE_2: u32 = 2;
pub const MEM_REGION_SIZE_4: u32 = 4;
pub const MEM_REGION_SIZE_8: u32 = 8;
pub const MEM_REGION_SIZE_16: u32 = 16;
pub type UINT8 = ::std::os::raw::c_uchar;
pub type UINT16 = ::std::os::raw::c_ushort;
pub type UINT32 = ::std::os::raw::c_uint;
pub type INT8 = ::std::os::raw::c_schar;
pub type INT16 = ::std::os::raw::c_short;
pub type INT32 = ::std::os::raw::c_int;
pub type FLOAT = f32;
pub type DOUBLE = f64;
pub type CHAR = ::std::os::raw::c_char;
pub type UINT64 = ::std::os::raw::c_ulonglong;
pub type INT64 = ::std::os::raw::c_longlong;
pub type UINTPTR = ::std::os::raw::c_uint;
pub type INTPTR = ::std::os::raw::c_int;
pub type Atomic = INT32;
pub type Atomic64 = INT64;
pub type BOOL = ::std::os::raw::c_uint;
#[doc = " @ingroup los_list\n Structure of a node in a doubly linked list."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LOS_DL_LIST {
    #[doc = "< Current node's pointer to the previous node"]
    pub pstPrev: *mut LOS_DL_LIST,
    #[doc = "< Current node's pointer to the next node"]
    pub pstNext: *mut LOS_DL_LIST,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of LOS_DL_LIST"][::std::mem::size_of::<LOS_DL_LIST>() - 16usize];
    ["Alignment of LOS_DL_LIST"][::std::mem::align_of::<LOS_DL_LIST>() - 8usize];
    ["Offset of field: LOS_DL_LIST::pstPrev"]
        [::std::mem::offset_of!(LOS_DL_LIST, pstPrev) - 0usize];
    ["Offset of field: LOS_DL_LIST::pstNext"]
        [::std::mem::offset_of!(LOS_DL_LIST, pstNext) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LmsMemListNode {
    pub node: LOS_DL_LIST,
    pub used: UINT32,
    pub poolAddr: UINTPTR,
    pub poolSize: UINT32,
    pub shadowStart: UINTPTR,
    pub shadowSize: UINT32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of LmsMemListNode"][::std::mem::size_of::<LmsMemListNode>() - 40usize];
    ["Alignment of LmsMemListNode"][::std::mem::align_of::<LmsMemListNode>() - 8usize];
    ["Offset of field: LmsMemListNode::node"]
        [::std::mem::offset_of!(LmsMemListNode, node) - 0usize];
    ["Offset of field: LmsMemListNode::used"]
        [::std::mem::offset_of!(LmsMemListNode, used) - 16usize];
    ["Offset of field: LmsMemListNode::poolAddr"]
        [::std::mem::offset_of!(LmsMemListNode, poolAddr) - 20usize];
    ["Offset of field: LmsMemListNode::poolSize"]
        [::std::mem::offset_of!(LmsMemListNode, poolSize) - 24usize];
    ["Offset of field: LmsMemListNode::shadowStart"]
        [::std::mem::offset_of!(LmsMemListNode, shadowStart) - 28usize];
    ["Offset of field: LmsMemListNode::shadowSize"]
        [::std::mem::offset_of!(LmsMemListNode, shadowSize) - 32usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LmsAddrInfo {
    pub memAddr: UINTPTR,
    pub shadowAddr: UINTPTR,
    pub shadowOffset: UINT32,
    pub shadowValue: UINT32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of LmsAddrInfo"][::std::mem::size_of::<LmsAddrInfo>() - 16usize];
    ["Alignment of LmsAddrInfo"][::std::mem::align_of::<LmsAddrInfo>() - 4usize];
    ["Offset of field: LmsAddrInfo::memAddr"]
        [::std::mem::offset_of!(LmsAddrInfo, memAddr) - 0usize];
    ["Offset of field: LmsAddrInfo::shadowAddr"]
        [::std::mem::offset_of!(LmsAddrInfo, shadowAddr) - 4usize];
    ["Offset of field: LmsAddrInfo::shadowOffset"]
        [::std::mem::offset_of!(LmsAddrInfo, shadowOffset) - 8usize];
    ["Offset of field: LmsAddrInfo::shadowValue"]
        [::std::mem::offset_of!(LmsAddrInfo, shadowValue) - 12usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LmsHook {
    pub init: ::std::option::Option<
        unsafe extern "C" fn(pool: *const ::std::os::raw::c_void, size: UINT32) -> UINT32,
    >,
    pub deInit: ::std::option::Option<unsafe extern "C" fn(pool: *const ::std::os::raw::c_void)>,
    pub mallocMark: ::std::option::Option<
        unsafe extern "C" fn(
            curNodeStart: *const ::std::os::raw::c_void,
            nextNodeStart: *const ::std::os::raw::c_void,
            nodeHeadSize: UINT32,
        ),
    >,
    pub freeMark: ::std::option::Option<
        unsafe extern "C" fn(
            curNodeStart: *const ::std::os::raw::c_void,
            nextNodeStart: *const ::std::os::raw::c_void,
            nodeHeadSize: UINT32,
        ),
    >,
    pub simpleMark: ::std::option::Option<
        unsafe extern "C" fn(startAddr: UINTPTR, endAddr: UINTPTR, value: UINT32),
    >,
    pub check: ::std::option::Option<unsafe extern "C" fn(checkAddr: UINTPTR, isFreeCheck: BOOL)>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of LmsHook"][::std::mem::size_of::<LmsHook>() - 48usize];
    ["Alignment of LmsHook"][::std::mem::align_of::<LmsHook>() - 8usize];
    ["Offset of field: LmsHook::init"][::std::mem::offset_of!(LmsHook, init) - 0usize];
    ["Offset of field: LmsHook::deInit"][::std::mem::offset_of!(LmsHook, deInit) - 8usize];
    ["Offset of field: LmsHook::mallocMark"][::std::mem::offset_of!(LmsHook, mallocMark) - 16usize];
    ["Offset of field: LmsHook::freeMark"][::std::mem::offset_of!(LmsHook, freeMark) - 24usize];
    ["Offset of field: LmsHook::simpleMark"][::std::mem::offset_of!(LmsHook, simpleMark) - 32usize];
    ["Offset of field: LmsHook::check"][::std::mem::offset_of!(LmsHook, check) - 40usize];
};
unsafe extern "C" {
    pub static mut g_lms: *mut LmsHook;
}
unsafe extern "C" {
    pub fn OsLmsInit();
}
unsafe extern "C" {
    pub fn OsLmsCheckValid(checkAddr: UINTPTR, isFreeCheck: BOOL);
}
unsafe extern "C" {
    pub fn OsLmsLosMallocMark(
        curNodeStart: *const ::std::os::raw::c_void,
        nextNodeStart: *const ::std::os::raw::c_void,
        nodeHeadSize: UINT32,
    );
}
unsafe extern "C" {
    pub fn OsLmsLosFreeMark(
        curNodeStart: *const ::std::os::raw::c_void,
        nextNodeStart: *const ::std::os::raw::c_void,
        nodeHeadSize: UINT32,
    );
}
unsafe extern "C" {
    pub fn OsLmsSimpleMark(startAddr: UINTPTR, endAddr: UINTPTR, value: UINT32);
}
unsafe extern "C" {
    pub fn OsLmsPrintPoolListInfo();
}
unsafe extern "C" {
    pub fn OsLmsReportError(p: UINTPTR, size: UINT32, errMod: UINT32);
}
unsafe extern "C" {
    pub fn CheckValid(dest: *const CHAR, src: *const CHAR);
}
unsafe extern "C" {
    pub fn __asan_store1_noabort(p: UINTPTR);
}
unsafe extern "C" {
    pub fn __asan_store4_noabort(p: UINTPTR);
}
unsafe extern "C" {
    pub fn __asan_load4_noabort(p: UINTPTR);
}
unsafe extern "C" {
    pub fn __asan_load1_noabort(p: UINTPTR);
}
unsafe extern "C" {
    pub fn __asan_loadN_noabort(p: UINTPTR, size: UINT32);
}
unsafe extern "C" {
    pub fn __asan_storeN_noabort(p: UINTPTR, size: UINT32);
}
unsafe extern "C" {
    pub fn __asan_store2_noabort(p: UINTPTR);
}
unsafe extern "C" {
    pub fn __asan_load2_noabort(p: UINTPTR);
}
unsafe extern "C" {
    pub fn __asan_store8_noabort(p: UINTPTR);
}
unsafe extern "C" {
    pub fn __asan_load8_noabort(p: UINTPTR);
}
unsafe extern "C" {
    pub fn __asan_load16_noabort(p: UINTPTR);
}
unsafe extern "C" {
    pub fn __asan_store16_noabort(p: UINTPTR);
}
unsafe extern "C" {
    pub fn __asan_handle_no_return();
}
